--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="purple">#6C63FF</color>
+    <color name="grey">#808080</color>
+    <color name="light_grey">#EEEEEE</color>
 </resources>
