--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="purple">#6C63FF</color>
+    <color name="purple">#6949FF</color>
     <color name="grey">#808080</color>
     <color name="light_grey">#EEEEEE</color>
 </resources>
