--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,19 +2,16 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-<<<<<<< Updated upstream
 
     <color name="purple">#6949FF</color>
     <color name="grey">#808080</color>
     <color name="light_grey">#EEEEEE</color>
     <color name="gray">#D3D3D3</color>
     <color name="pp">#6949ff</color>
-=======
-    <color name="purple">#5C3FFF</color>
+<!--    <color name="purple">#5C3FFF</color>-->
     <color name="light_purple">#F0EDFF</color>
     <color name="light_blue">#AAC8E0</color>
     <color name="light_orange">#F5A26F</color>
     <color name="light_pink">#E0A1E0</color>
-    <color name="gray">#888888</color>
->>>>>>> Stashed changes
+<!--    <color name="gray">#888888</color>-->
 </resources>
