--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -10,21 +10,18 @@
     <include
         android:id="@+id/search_header"
         layout="@layout/ui_28_search_header"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <include
         android:id="@+id/search_options"
-        android:layout_marginTop="5dp"
         layout="@layout/ui_28_search_options"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/search_header"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/search_header" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginTop="5dp"
