--- a/app/src/main/res/drawable/top_collections_rounded_background.xml
+++ b/app/src/main/res/drawable/top_collections_rounded_background.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="16dp"/>
-    <solid android:color="@android:color/darker_gray"/>
+
+    <!-- Bo tròn góc -->
+    <corners android:radius="16dp" />
+
+    <!-- Màu nền -->
+    <solid android:color="@android:color/white" />
+
+    <!-- Màu viền -->
+    <stroke
+        android:width="2dp"
+        android:color="#CCCCCC" />
 </shape>
