--- a/app/src/main/res/layout/detail_collections.xml
+++ b/app/src/main/res/layout/detail_collections.xml
@@ -91,5 +91,5 @@
         app:layout_constraintTop_toBottomOf="@id/detailCollectionTextQuizCount"
         app:layout_constraintBottom_toBottomOf="parent"
         android:padding="16dp"
-        android:scrollbars="vertical"/>
+        android:scrollbars="none"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
