--- a/app/src/main/res/layout/top_collections.xml
+++ b/app/src/main/res/layout/top_collections.xml
@@ -41,5 +41,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="8dp"
-        android:scrollbars="vertical"/>
+        android:scrollbars="none"/>
 </LinearLayout>
