--- a/app/src/main/res/layout/top_collections_item_category.xml
+++ b/app/src/main/res/layout/top_collections_item_category.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_margin="12dp"
-        android:textColor="#0013ea"
+        android:textColor="@android:color/black"
         android:textSize="16sp"
         android:textStyle="bold"/>
 </RelativeLayout>
