--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,15 @@
     <color name="light_grey">#EEEEEE</color>
     <color name="gray">#D3D3D3</color>
     <color name="pp">#6949ff</color>
+
+    <color name="light_gray">#E0E0E0</color>
+
+
+    <!-- Validate field ui-07   -->
+    <color name="errorColor">#FF0000</color>
+    <color name="validColor">#00C853</color>
+    <color name="focusedColor">#6200EE</color>
+    <color name="defaultTextColor">#757575</color>
+    <color name="defaultDividerColor">#BDBDBD</color>
+    <color name="defaultIconColor">#9E9E9E</color>
 </resources>
