--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,11 @@
     <color name="light_orange">#F5A26F</color>
     <color name="light_pink">#E0A1E0</color>
 <!--    <color name="gray">#888888</color>-->
+    <color name="errorColor">#FF0000</color>
+    <color name="validColor">#00C853</color>
+    <color name="focusedColor">#6200EE</color>
+    <color name="defaultTextColor">#757575</color>
+    <color name="defaultDividerColor">#BDBDBD</color>
+    <color name="defaultIconColor">#9E9E9E</color>
+
 </resources>
