--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,5 +23,12 @@
     <style name="CornerShapableImageView5">
         <item name="cornerSize">40dp</item>
     </style>
+
+    <style name="CustomTabText" parent="TextAppearance.MaterialComponents.Button">
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/nunitomedium</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
     <style name="Theme.Quizzi" parent="Base.Theme.Quizzi" />
 </resources>
