--- a/app/src/main/res/layout/fragment_my_quizzo.xml
+++ b/app/src/main/res/layout/fragment_my_quizzo.xml
@@ -3,8 +3,71 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.MyQuizzoFragment">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
+        <include
+            android:id="@+id/search_options"
+            layout="@layout/ui_32_myquizzo_options"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <LinearLayout
+            android:weightSum="2"
+            android:id="@+id/ln_titlee"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="5dp"
+            app:layout_constraintTop_toBottomOf="@+id/search_options">
+
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_weight="1"
+                android:id="@+id/txt_title_lib_my_quizzo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="45 Quizzo"
+                android:textSize="16sp"
+                android:layout_marginStart="20dp"
+                android:layout_gravity="center"
+                android:fontFamily="@font/nunitobold"
+                android:textColor="@color/black"/>
+
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Newest"
+                android:drawableRight="@drawable/sort"
+                android:drawablePadding="5dp"
+                android:textSize="16sp"
+                android:gravity="end"
+                android:layout_marginEnd="20dp"
+                android:textColor="@color/purple"
+                android:fontFamily="@font/nunitobold"
+                android:layout_gravity="center"/>
+        </LinearLayout>
+
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ln_titlee" >
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rcl_view_quizzo_cls"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </androidx.core.widget.NestedScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
