MS-65: done upload image and audio quiz question

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,4 +25,10 @@
         <item name="android:navigationBarColor">@android:color/white</item>
     </style>
 
+    <style name="UIQCRoundedImageView" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">24dp</item>
+    </style>
+
+
 </resources>
