--- a/app/src/main/res/drawable/ui_09_circle_background.xml
+++ b/app/src/main/res/drawable/ui_09_circle_background.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#7D5CFF" />
+    <solid android:color="#FFFFFF"/> <!-- Background color -->
+    <stroke
+        android:width="2dp"
+        android:color="#E0E0E0"/> <!-- Border color -->
 </shape>
