--- a/app/src/main/res/layout/ui_42.xml
+++ b/app/src/main/res/layout/ui_42.xml
@@ -91,37 +91,23 @@
             android:layout_marginBottom="10dp"/>
     </LinearLayout>
 
-    <!-- RecyclerView danh sách người chơi -->
+    <!-- Danh sách người chơi -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/UI42recyclerPlayers"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/UI42quizCard"
-        app:layout_constraintBottom_toTopOf="@id/UI42progressLoading"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:clipToPadding="false"
-        android:overScrollMode="never"
-        tools:ignore="NotSibling" />
+        android:layout_below="@+id/UI42quizCard"
+        android:layout_above="@+id/UI42loading_spinner"
+        android:layout_margin="10dp"
+        android:clipToPadding="false"/>
 
-
-    <!-- Loading animation -->
-    <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ProgressBar
-            android:id="@+id/UI42progressLoading"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:indeterminate="true"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginBottom="20dp"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <ProgressBar
+        android:id="@+id/UI42loading_spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="16dp"/>
 
 
 </RelativeLayout>
