--- a/app/src/main/res/layout/ui_42_item_player.xml
+++ b/app/src/main/res/layout/ui_42_item_player.xml
@@ -1,27 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:gravity="center_vertical"
-    android:padding="8dp"
-    android:background="@drawable/ui_42_bg_card"
-    android:layout_margin="4dp">
+    android:padding="4dp">
 
     <ImageView
         android:id="@+id/imgAvatar"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:scaleType="centerCrop"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/img"
         android:background="@drawable/ui_09_circle_background"
-        android:src="@drawable/ic_15_top_authors_1"/>
+        android:scaleType="centerCrop"
+        android:clipToOutline="true"
+        android:outlineProvider="background"/>
 
-    <TextView
-        android:id="@+id/txtName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Player Name"
-        android:textSize="14sp"
-        android:textColor="@android:color/black"
-        android:layout_marginLeft="8dp"/>
-</LinearLayout>
+</FrameLayout>
