95-96 done, 97 - chart library error

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -103,6 +103,7 @@
                     android:orientation="vertical">
 
                     <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/follower_btn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Andrew Asilain"
