--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,5 +30,9 @@
         <item name="cornerSize">24dp</item>
     </style>
 
+    <style name="UIQCRoundedImageViewBNV" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">12dp</item>
+    </style>
 
 </resources>
