--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,28 +13,30 @@
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/bottom_nav"/>
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:paddingTop="5dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:itemIconTint="@color/item_bottom_nav"
-        app:labelVisibilityMode="labeled"
-        app:itemTextColor="@color/item_bottom_nav"
         app:itemIconSize="22sp"
+        app:itemIconTint="@color/item_bottom_nav"
+        app:itemTextColor="@color/item_bottom_nav"
+        app:labelVisibilityMode="labeled"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/bottom_menu">
 
         <com.google.android.material.imageview.ShapeableImageView
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:src="@drawable/logo_home"
+            android:layout_gravity="center|top"
             android:layout_marginTop="5dp"
-            app:shapeAppearanceOverlay="@style/CornerShapableImageView"
             android:background="@color/pp"
-            android:layout_gravity="center|top" />
+            android:src="@drawable/logo_home"
+            app:shapeAppearanceOverlay="@style/CornerShapableImageView" />
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
