--- a/app/src/main/res/layout/fragment_my_quizzo.xml
+++ b/app/src/main/res/layout/fragment_my_quizzo.xml
@@ -69,5 +69,10 @@
                 android:layout_height="match_parent"/>
         </androidx.core.widget.NestedScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone" />
 </FrameLayout>
